--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-django
-djangorestframework
-psycopg2-binary
-python-dotenv
-django-filter
-coverage
-requests
-selenium
-webdriver-manager
-jdatetime
-pytz
-redis
-celery
-flower
+django==5.1
+djangorestframework==3.15.2
+psycopg2-binary==2.9.9
+python-dotenv==1.0.1
+django-filter==24.3
+coverage==7.6.1
+requests==2.32.3
+selenium==4.23.1
+webdriver-manager==4.0.2
+jdatetime==5.0.0
+pytz==2024.1
+redis==5.0.8
+celery==5.4.0
+flower==2.0.1
